suggestions/static/suggestions/index.css
/* ... */
.back:hover {
    cursor: pointer;
    border-color: #BB86FC;
}


/* Fixing the stupid bug that CSS has on the hover attribute on touch screens I hate doing this seriously fuck front end developing */
@media only screen and (min-width:1366px) {
    .tag-card:hover {
        border-color: #BB86FC
    }
}


/*Mobile Responsiveness*/
@media only screen and (max-width:479px) {
    body {
        background-image: url('mobile_background.jpg');
    }

    .navbar li a {
        font-size: 0.8rem;
    }

    .about-text {
        width: 80%;
        margin-left: 10%;
        margin-right: 10%;
        font-size: 0.8rem;
    }
    

    .contact-text {
        width: 80%;
        margin-left: 10%;
        margin-right: 10%;
        font-size: 0.8rem;
    }
    
    .contact-intro {
        padding: 2rem;
        background-color:  rgb(40, 40, 40);
        border-radius: 1rem;
        overflow-wrap: break-word;
    }

    .intro .welcome {
        font-size: 2rem;
    }

    .mobile-br {
        display: block;
    }

    .intro .welcome2{
        font-size: 1rem;
    }

    .started-button button{
        border-width: 0.1rem;
        font-size: 1.5rem;
    }

    .second {
        font-size: 1.5rem;
        margin-left: 0;
        margin-right: 0;
    }
    
    .player-choice {
        margin-bottom: 30vh;
        margin-left: 4vw;
        margin-right: 4vw;
    }

    .player-control {
        margin-left: 0;
        margin-right: 0;
    }
    
    .multiplayer-button button, .singleplayer-button button {
        border-width: 0.1rem;
        font-size: 1.3rem;
        width: 75%;
    }

    .multi-text {
        font-size: 1.5rem;
        margin-left: 5vw;
        margin-right: 5vw;
    }

    .competitive-button button, .coop-button button {
        border-width: 0.1rem;
        font-size: 1.3rem;
        width: 70%;
    }

    .tags-canvas {
        justify-content: center;
        max-width: 100%;
        float: left;
    }
    
    .canvas-text {
        font-size: 1.4rem;
    }

    .tags-advice {
        font-size: 1rem;
        margin-left: 1rem;
        margin-right: 1rem;
    }
    
    .tags-grid {
        display: grid;
        grid-gap: 0.5rem;
        justify-content: space-evenly;
        grid-template-columns:  auto auto auto;
        margin-left: 7vw;
        margin-right: 5vw;
    }
    
    .tag-card {
        border-width: 0.1rem;
        font-size: .6rem;
        border-radius: 1.5rem;
        text-overflow: ellipsis;
        width: 50%;

    }

    .submitter {
        width: 50vw;
        border-width: 0.1rem;
        font-size: 1.5rem;
    }

    .tags-control {
        margin-top: 5vh;
    }
    
    .tags-control-2 {
        margin-left: 5vw;
        margin-right: 5vw;
    }

    .games {
        margin-top: 30vh;
        margin-bottom: 10vh;
        margin-left: 0;
        margin-right: 0;
    }
    
    .game {
        justify-content: center;
        margin-bottom: 5vh;
        height: 100vh;
        
    }

    .content-parent {
        max-height: 100vh;
    }
    
    .game-name {
        margin: 0.5rem;
        font-size: 1.5rem;
    }
    
    .image-parent {
        display: flex;
        width: 100%;
    }

    .image-child {
        min-width: 25vw;
        max-width: 80vw;
    }
    
    .game-price {
        font-size: 1rem;
    }
    
    .game-description {
        font-size: 0.7rem;
        padding: 5vw;
    }

    
    .arrow-child {
        max-width: 13vw;
    }
    
    .back {    
        border-width: 0.1rem;;
        font-size: 1rem;
        margin-left: 5vw;
        margin-right: 5vw;
    }
}


/* defining animations for all browsers  */
@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Firefox < 16 */
@-moz-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Internet Explorer */
@-ms-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Opera < 12.1 */
@-o-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

